# robot_description

./: CMakeLists.txt  README.md  package.xml
config/: wheels_controller.yaml
launch/: robot_controllers.launch.py  robot_description.launch.py  robot_description_launch.py  robot_gazebo.launch.py  robot_gazebo_launch.py  robot_state_publisher.launch.py  robot_velocity.launch.py
meshes/dae/: Cube.001.dae  Cube.017.dae  Cube.024.dae  Cube.025.dae  Cube.027.dae  Cube.032.dae  Cube.033.dae  Cube.034.dae  Cube.035.dae  Cube.062.dae  Cube.063.dae  Cube.068.dae  Cube.070.dae  Cube.071.dae  Torus.000.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.006.dae  Torus.007.dae  Torus.008.dae
robots/: robot_A.urdf.xacro  robot_B.urdf.xacro  ros2_control_B.urdf.xacro
rosbags/rosbag_floor/: metadata.yaml  rosbag_floor_0.db3
rosbags/rosbag_floor_world/: data_0.db3  metadata.yaml
rosbags/rosbag_sand/: metadata.yaml  rosbag_sand_0.db3
rosbags/rosbag_sand_world/: data_0.db3  metadata.yaml
src/: speed_controller.cpp
urdf/: ros2_control.urdf.xacro
urdf/aux/: robot1.urdf
urdf/control/: ros2_control.urdf.xacro
urdf/original_urdf/: robot.urdf
urdf/sensors/: sensors.urdf.xacro
urdf/wheels/: wheels.urdf.xacro
